[package]
name = "pyo3-macros-backend"
version = "0.26.0"
description = "Code generation for PyO3 package"
authors = ["PyO3 Project and Contributors <https://github.com/PyO3>"]
keywords = ["pyo3", "python", "cpython", "ffi"]
homepage = "https://github.com/pyo3/pyo3"
repository = "https://github.com/pyo3/pyo3"
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version.workspace = true

# Note: we use default-features = false for proc-macro related crates
# not to depend on proc-macro itself.
# See https://github.com/PyO3/pyo3/pull/810 for more.
[dependencies]
heck = "0.5"
proc-macro2 = { version = "1.0.60", default-features = false }
pyo3-build-config = { path = "../pyo3-build-config", version = "=0.26.0", features = ["resolve-config"] }
quote = { version = "1", default-features = false }

[dependencies.syn]
# 2.0.59 for `LitCStr`
version = "2.0.59"
default-features = false
features = ["derive", "parsing", "printing", "clone-impls", "full", "extra-traits", "visit-mut"]

[build-dependencies]
pyo3-build-config = { path = "../pyo3-build-config", version = "=0.26.0" }

[lints]
workspace = true

[features]
experimental-async = []
experimental-inspect = []
