[package]
name = "pyo3-macros"
version = "0.22.1"
description = "Proc macros for PyO3 package"
authors = ["PyO3 Project and Contributors <https://github.com/PyO3>"]
keywords = ["pyo3", "python", "cpython", "ffi"]
homepage = "https://github.com/pyo3/pyo3"
repository = "https://github.com/pyo3/pyo3"
categories = ["api-bindings", "development-tools::ffi"]
license = "MIT OR Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[features]
multiple-pymethods = []
experimental-async = ["pyo3-macros-backend/experimental-async"]
gil-refs = ["pyo3-macros-backend/gil-refs"]

[dependencies]
proc-macro2 = { version = "1.0.60", default-features = false }
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
pyo3-macros-backend = { path = "../pyo3-macros-backend", version = "=0.22.1" }

[lints]
workspace = true
