[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyo3-runtime"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT OR Apache-2.0"
keywords = []
authors = [
  { name = "David Hewitt", email = "1939362+davidhewitt@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/PyO3/pyo3"

[tool.hatch.version]
path = "src/pyo3_runtime/__init__.py"
