[package]
name = "pyo3-testing"
version = "0.1.0"
edition = "2021"

[lib]
name = "pyo3_testing"
path = "src/lib.rs"
# crate-type = ["rlib"]  # cdylib required for python import, rlib required for rust tests.
proc-macro = true

[dependencies]
quote = "1.0.35"
proc-macro2 = "1.0.74"
syn = {version = "2.0.55", features = ["full"]}

[lints]
workspace = true