[package]
name = "pyo3-build-utils"
version = "0.0.1"
description = "Build utilities from PyO3"
authors = ["PyO3 Project and Contributors <https://github.com/PyO3"]
homepage = "https://github.com/pyo3/pyo3"
repository = "https://github.com/pyo3/pyo3.git"
documentation = "http://pyo3.github.io/PyO3/pyo3/"
categories = ["api-bindings", "development-tools::ffi"]
license = "Apache-2.0"

[dependencies]
regex = "0.2"
version_check = "0.1"