[package]
name = "pyo3cls"
version = "0.3.0"
description = "Proc macros for PyO3 package"
authors = ["PyO3 Project and Contributors <https://github.com/PyO3>"]
keywords = ["pyo3", "python", "cpython", "ffi"]
homepage = "https://github.com/pyo3/pyo3"
repository = "https://github.com/pyo3/pyo3.git"
documentation = "https://docs.rs/pyo3cls"
categories = ["api-bindings", "development-tools::ffi"]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote="0.6"

[dependencies.syn]
version="0.14"
features=["full", "parsing", "printing", "extra-traits"]

[dependencies.pyo3-derive-backend]
path = "../pyo3-derive-backend"
version = "0.3.0"

[dependencies.proc-macro2]
version = "0.4"
features= ["nightly"]
