[package]
authors = ["PyO3 Authors"]
name = "pyo3-pytests"
version = "0.1.0"
description = "Python-based tests for PyO3"
edition = "2018"
publish = false

[dependencies]
pyo3 = { path = "../", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = { path = "../pyo3-build-config" }

[lib]
name = "pyo3_pytests"
crate-type = ["cdylib"]
