[package]
authors = ["PyO3 Authors"]
name = "pyo3-pytests"
version = "0.1.0"
description = "Python-based tests for PyO3"
edition = "2021"
publish = false

[dependencies]
futures = "0.3.29"
pyo3 = { path = "../", features = ["extension-module", "anyio"] }

[build-dependencies]
pyo3-build-config = { path = "../pyo3-build-config" }

[lib]
name = "pyo3_pytests"
crate-type = ["cdylib"]

[lints]
workspace = true
