[build-system]
requires = ["maturin>=0.13,<0.14"]
build-backend = "maturin"

[tool.pytest.ini_options]
addopts = "--benchmark-disable"

[project]
name = "pyo3_pytests"
version = "0.1.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]
