[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.pytest.ini_options]
addopts = "--benchmark-disable"

[project]
name = "pyo3_pytests"
version = "0.1.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=3.55",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=3.4",
    "pytest>=6.0",
    "typing_extensions>=4.0.0"
]
