[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.pytest.ini_options]
addopts = "--benchmark-disable"

[project]
name = "pyo3_pytests"
version = "0.1.0"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
]

[project.optional-dependencies]
dev = [
    "gevent>=22.10.2; implementation_name == 'cpython'",
    "hypothesis>=3.55",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=3.4",
    # pinned < 8.1 because https://github.com/CodSpeedHQ/pytest-codspeed/issues/27
    "pytest>=7,<8.1",
    "typing_extensions>=4.0.0"
]
