[package]
name = "python27-sys"
version = "0.0.6"
description = "FFI Declarations for Python 2.7"
readme = "README.md"
keywords = [
    "python",
    "cpython",
    "libpython27",
]
homepage = "https://github.com/dgrunwald/rust-python27-sys"
repository = "https://github.com/dgrunwald/rust-python27-sys.git"
license = "Python-2.0"
authors = ["Daniel Grunwald <daniel@danielgrunwald.de>"]
links = "python27"
build = "build.rs"
exclude = [
    ".gitignore",
    ".travis.yml",
]

[dependencies]
libc = "*"

[build-dependencies]
# pkg-config = "0.3"
regex = "0.1.8"

# TODO: depends on trunk pkg-config for now because we 
# require 14c4b9, can revert this when alex bumps the 
# crate release 
[build-dependencies.pkg-config]
git = "https://github.com/alexcrichton/pkg-config-rs.git"

[features]
# This is examined by ./build.rs to determine which python version 
# to try to bind to.
#
# According to PEP 404 there will never be a python 2.8, but maybe
# one day we could try to support < 2.7 ?
#
# Similarly functionality is duplicated in python3-sys/Cargo.toml 
# where supporting multiple 3.x's is more important.
default = ["python-2-7"]
python-2-7 = []
