[package]
name = "python27-sys"
version = "0.1.2"
description = "FFI Declarations for Python 2.7"
readme = "README.md"
keywords = [
    "python",
    "cpython",
    "libpython27",
]
homepage = "https://github.com/dgrunwald/rust-cpython/tree/master/python27-sys"
repository = "https://github.com/dgrunwald/rust-cpython/tree/master/python27-sys"
categories = ["external-ffi-bindings"]
license = "Python-2.0"
authors = ["Daniel Grunwald <daniel@danielgrunwald.de>"]
links = "python27"
build = "build.rs"
exclude = [
    ".gitignore",
    ".travis.yml",
]
workspace = ".."

[dependencies]
libc = "0.2"

[build-dependencies]
regex = "0.1"

[features]
# This is examined by ./build.rs to determine which python version 
# to try to bind to.
#
# According to PEP 404 there will never be a python 2.8, but maybe
# one day we could try to support < 2.7 ?
#
# Similarly functionality is duplicated in python3-sys/Cargo.toml 
# where supporting multiple 3.x's is more important.
default = ["python-2-7"]
python-2-7 = []

# Use this feature when building an extension module.
# It tells the linker to keep the python symbols unresolved,
# so that the module can also be used with statically linked python interpreters.
extension-module = [ ]

