[package]
name = "python3-sys"
version = "0.1.0"
description = "FFI Declarations for Python 3"
readme = "README.md"
keywords = [
    "python",
    "cpython",
    "libpython3",
]
homepage = "https://github.com/dgrunwald/rust-cpython/tree/master/python3-sys"
repository = "https://github.com/dgrunwald/rust-cpython/tree/master/python3-sys"
license = "Python-2.0"
authors = ["Daniel Grunwald <daniel@danielgrunwald.de>"]
links = "python3"
build = "build.rs"
exclude = [
    ".gitignore",
    ".travis.yml",
]

[dependencies]
libc = "*"

[build-dependencies]
# pkg-config = "0.3"
regex = "0.1.8"

# TODO: depends on trunk pkg-config for now because we 
# require 14c4b9, can revert this when alex bumps the 
# crate release 
[build-dependencies.pkg-config]
git = "https://github.com/alexcrichton/pkg-config-rs.git"

[features]
# This is examined by ./build.rs to determine which python version 
# to try to bind to.
default = ["python-3"]

# Bind to any python 3.x.
python-3 = []

# Or, bind to a particular minor version.
python-3-4 = []
python-3-5 = []
