[package]
name = "python3-sys"
version = "0.1.3"
description = "FFI Declarations for Python 3"
readme = "README.md"
keywords = [
    "python",
    "cpython",
    "libpython3",
]
homepage = "https://github.com/dgrunwald/rust-cpython/tree/master/python3-sys"
repository = "https://github.com/dgrunwald/rust-cpython/tree/master/python3-sys"
categories = ["external-ffi-bindings"]
license = "Python-2.0"
authors = ["Daniel Grunwald <daniel@danielgrunwald.de>"]
links = "python3"
build = "build.rs"
exclude = [
    ".gitignore",
    ".travis.yml",
]
workspace = ".."

[dependencies]
libc = "0.2"

[build-dependencies]
regex = "0.1"

[features]
# This is examined by ./build.rs to determine which python version 
# to try to bind to.
default = ["python-3"]

# Use this feature when building an extension module.
# It tells the linker to keep the python symbols unresolved,
# so that the module can also be used with statically linked python interpreters.
extension-module = [ ]

# Bind to any python 3.x.
python-3 = []

# Or, bind to a particular minor version.
python-3-4 = []
python-3-5 = []
python-3-6 = []

# Restrict to PEP-384 stable ABI
pep-384 = []

