[package]
name = "decorator"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "decorator"
crate-type = ["cdylib"]

[dependencies.pyo3]
# If you copy this example, you should uncomment this...
# version = "0.15.1"

# ...and delete this path
path = "../.."
features = ["auto-initialize", "extension-module"]

[workspace]