[metadata]
name = setuptools-rust-starter
version = 0.1.0
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Rust
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X

[options]
packages =
    setuptools_rust_starter
include_package_data = True
zip_safe = False
