[package]
authors = ["PyO3 Authors"]
name = "setuptools_rust_extension"
version = "0.1.0"
description = "A Python wrapper for the Rust API for purposes of testing"
edition = "2018"

[dependencies]

[dependencies.pyo3]
path = "../../"
features = ["extension-module"]

[lib]
name = "setuptools_rust_extension"
crate-type = ["cdylib"]
